--- a/_includes/custom-schedule.html
+++ b/_includes/custom-schedule.html
@@ -11,7 +11,7 @@
       <tr> <td>11:25</td> <td><a href="https://swcarpentry.github.io/r-novice-gapminder/03-seeking-help/index.html">Seeking Help</a></td> </tr>
       <tr> <td>11:45</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/02-starting-with-data.html">Starting with data</a></td> </tr>
       <tr> <td>12:00</td> <td>Lunch</td> </tr>
-      <tr> <td>13:30</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/02-starting-with-data.html">Starting with data</a></td> </tr>
+      <tr> <td>13:30</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/02-starting-with-data.html">Starting with data (cont.)</a></td> </tr>
       <tr> <td>15:30</td> <td>End</td> </tr>
     </table>
   </div>
