--- a/_includes/custom-schedule.html
+++ b/_includes/custom-schedule.html
@@ -7,19 +7,20 @@
         <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
       <tr> <td>10:00</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/01-intro-to-r.html">Introduction to R</a></td> </tr>
-      <tr> <td>11:45</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/02-starting-with-data.html">Starting with data</a></td> </tr>
       <tr> <td>12:00</td> <td>Lunch</td> </tr>
-      <tr> <td>13:30</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/02-starting-with-data.html">Starting with data (cont.)</a></td> </tr>
+      <tr> <td>13:00</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/02-starting-with-data.html">Starting with data (cont.)</a></td> </tr>
       <tr> <td>15:30</td> <td>End</td> </tr>
     </table>
   </div>
   <div class="col-md-6"> <!-- right column -->
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>10:00</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/03-dplyr.html">Manipulating, analyzing and exporting data with tidyverse</a></td> </tr>
+      <tr> <td>9:00</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/03-dplyr.html">Manipulating, analyzing and exporting data with tidyverse</a></td> </tr>
       <tr> <td>12:00</td> <td>Lunch</td> </tr>
-      <tr> <td>13:30</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/04-visualization-ggplot2.html">Creating Publication-Quality Graphics with ggplot2</a></td> </tr>
-      <tr> <td>15:30</td> <td>End</td> </tr>
+      <tr> <td>13:00</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/04-visualization-ggplot2.html">Creating Publication-Quality Graphics with ggplot2</a></td> </tr>
+      <tr> <td>15:30</td> <td>Post-workshop survey and closing</td> </tr>
+      
+      <tr> <td>16:00</td> <td>End</td> </tr>
       <tr>               <!-- row 1   -->
         <td>After finishing</td>
         <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
