--- a/_includes/custom-schedule.html
+++ b/_includes/custom-schedule.html
@@ -8,7 +8,7 @@
       </tr>
       <tr> <td>10:00</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/01-intro-to-r.html">Introduction to R</a></td> </tr>
       <tr> <td>12:00</td> <td>Lunch</td> </tr>
-      <tr> <td>13:00</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/02-starting-with-data.html">Starting with data (cont.)</a></td> </tr>
+      <tr> <td>13:00</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/02-starting-with-data.html">Starting with data</a></td> </tr>
       <tr> <td>15:30</td> <td>End</td> </tr>
     </table>
   </div>
